<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <!-- source used: https://developer.android.com/reference/android/widget/SearchView
     SearchView documentation, accessed 04/26/2022,
     used to understand different search widget attributes-->

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="Search Exhibit Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"></SearchView>

    <TextView
        android:id="@+id/results_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_weight="1"
        android:text="Search results:"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/plan_btn"
        app:layout_constraintStart_toStartOf="@+id/display_list"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/search_list"
        android:layout_width="411dp"
        android:layout_height="332dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <TextView
        android:id="@+id/plan_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Current plan:"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/plan_btn"
        app:layout_constraintStart_toStartOf="@+id/display_list"
        app:layout_constraintTop_toBottomOf="@+id/search_list"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/exhibits_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:textSize="15dp"
        android:text="Number of exhibits: "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/display_list"
        tools:layout_editor_absoluteY="417dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/display_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/plan_btn"
        app:layout_constraintTop_toBottomOf="@+id/plan_lbl" />

    <Button
        android:id="@+id/plan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>